<resources>
    <string name="app_name">Brain timer app</string>
    <string name="go">GO!</string>
    <string name="_10_10">10+10</string>
    <string name="button">Button</string>
    <string name="correct">correct</string>
    <string name="_0_0">0/0</string>
    <string name="_30_s">30 s</string>
    <string name="textview">TextView</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="_3">3</string>
    <string name="gogo">Go!</string>

</resources>
