<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:onClick="start"
    android:padding="15dp"
    android:visibility="visible"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/gameRelativeLayout"
        android:layout_width="414dp"
        android:layout_height="740dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="661dp"
            android:layout_marginEnd="79dp"
            android:layout_marginRight="79dp"
            android:onClick="playAgain"
            android:text="@string/play_again"
            android:textSize="30sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="266dp"
            android:layout_height="56dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="115dp"
            android:textSize="30sp"
            android:visibility="visible" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="356dp"
            android:layout_height="344dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="163dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="212dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/_3"
                android:textSize="80sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/_3"
                android:textSize="80sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_3"
                android:textSize="80sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_3"
                android:textSize="80sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />
        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="108dp"
            android:layout_height="79dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="254dp"
            android:layout_marginRight="254dp"
            android:layout_marginBottom="617dp"
            android:background="?attr/actionModeSplitBackground"
            android:text="@string/_30_s"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:layout_marginBottom="629dp"
            android:background="?attr/colorAccent"
            android:padding="10dp"
            android:text="@string/_10_10"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="294dp"
            android:layout_marginLeft="294dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="630dp"
            android:background="?attr/colorError"
            android:padding="15sp"
            android:text="@string/_0_0"
            android:textSize="40sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:layout_marginBottom="277dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="start"
        android:padding="20sp"
        android:text="@string/gogo"
        android:textSize="80sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>